libmojolicious-plugin-mailexception-perl (0.23-1) nowtaxi; urgency=medium

  * Update version. Prevent hangs up if someone remove maildir.

 -- Dmitry E. Oboukhov <unera@debian.org>  Tue, 03 Jul 2018 12:17:14 +0300

libmojolicious-plugin-mailexception-perl (0.22-1) nowtaxi; urgency=medium

  * Add 'maildir' configoption.

 -- Dmitry E. Oboukhov <unera@debian.org>  Tue, 03 Jul 2018 12:09:32 +0300

libmojolicious-plugin-mailexception-perl (0.21-1) nowtaxi; urgency=medium

  * Stacksize limit.

 -- Dmitry E. Oboukhov <unera@debian.org>  Wed, 04 Apr 2018 16:53:52 +0300

libmojolicious-plugin-mailexception-perl (0.20-1) unstable; urgency=medium

  * Update for latest mojolicious, Debian FTBFS, closes: 825541.

 -- Dmitry E. Oboukhov <unera@debian.org>  Sun, 05 Jun 2016 13:33:41 +0300

libmojolicious-plugin-mailexception-perl (0.19-1) unstable; urgency=medium

  * Some fixes for Mojo v.5, closes: #765004
    thanks to Stephan Jauernick <stephan@stejau.de>.

 -- Dmitry E. Oboukhov <unera@debian.org>  Fri, 17 Oct 2014 23:44:06 +0400

libmojolicious-plugin-mailexception-perl (0.18-1) unstable; urgency=low

  * User can add different tags for exceptions.

 -- Dmitry E. Oboukhov <unera@debian.org>  Wed, 06 Nov 2013 11:29:05 +0400

libmojolicious-plugin-mailexception-perl (0.17-1) unstable; urgency=low

  * New release, closes: #713231
   - New Mojo uses render(text => $text) instead reder_text($text).

 -- Dmitry E. Oboukhov <unera@debian.org>  Sat, 17 Aug 2013 12:09:17 +0400

libmojolicious-plugin-mailexception-perl (0.16-1) unstable; urgency=low

  * Works properly if client's application redefines $SIG{__DIE__}, too.

 -- Dmitry E. Oboukhov <unera@debian.org>  Sun, 24 Mar 2013 00:24:49 +0400

libmojolicious-plugin-mailexception-perl (0.15-1) unstable; urgency=low

  * use CORE::die instead die (try to localize modperl's segfaults).

 -- Dmitry E. Oboukhov <unera@debian.org>  Wed, 20 Mar 2013 02:30:07 +0400
