@@ -1,3 +1,9 @@
+libmojolicious-plugin-mailexception-perl (0.24-1) ; urgency=medium
+
+  * Do not croak if maildir is not accessible.
+
+ -- Dmitry E. Oboukhov <unera@debian.org>  Tue, 03 Jul 2018 13:52:36 +0300
+
 libmojolicious-plugin-mailexception-perl (0.23-1) nowtaxi; urgency=medium
 
   * Update version. Prevent hangs up if someone remove maildir.
